<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_background"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context=".activities.ItemEditActivity">

    <TextView
        android:id="@+id/textViewItemNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/item_name"
        android:textColor="@color/colorAccent"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextItemName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:hint="@string/hint_item_name"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewItemNameLabel" />


    <LinearLayout
        android:id="@+id/linearLayoutItemQuantity"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="83dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="8"
        app:layout_constraintTop_toBottomOf="@+id/editTextItemName"
        tools:layout_editor_absoluteX="20dp">

        <ImageButton
            android:id="@+id/itemQtyDecrease"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/decrease_label_description"
            android:foreground="@drawable/previous"
            android:foregroundTint="@color/colorTextSecondary" />


        <EditText
            android:id="@+id/editTextItemQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="number"
            android:text="@string/empty"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/itemQtyIncrease"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/increase_label_description"
            android:foreground="@drawable/next"
            android:foregroundTint="@color/colorTextSecondary" />

    </LinearLayout>

    <Button
        android:id="@+id/addItemButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="100dp"
        android:gravity="center"
        android:text="@string/add_item_button"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutItemQuantity" />

</androidx.constraintlayout.widget.ConstraintLayout>